# WAPI

./: .gitignore  LICENSE  NEXT_STEPS.md  README.md  VISION.md
bindings/c/: wapi_reactor.c
bindings/csharp/: wapi.cs
examples/: hello_audio.c  hello_headless.c  hello_opcodes.c  hello_triangle.c  hello_triangle.wasm
examples/hello_game/: ai.c  ai_hash.h  assets.h  build.bat  emit_ai_hash.ps1  emit_tracker_hash.ps1  game.c  gen_atlas.bat  gen_atlas.c  hello_game.wasm  run.ps1  tracker.c  tracker_hash.h  tracker_types.h
include/wapi/: wapi.h  wapi_audio.h  wapi_audio_plugin.h  wapi_audioplugin.h  wapi_authn.h  wapi_barcode.h  wapi_battery.h  wapi_biometric.h  wapi_bluetooth.h  wapi_camera.h  wapi_capability.h  wapi_clipboard.h  wapi_clock.h  wapi_codec.h  wapi_compression.h  wapi_contacts.h  wapi_content.h  wapi_context.h  wapi_crypto.h  wapi_dialog.h  wapi_display.h  wapi_dnd.h  wapi_encoding.h  wapi_env.h  wapi_event.h  wapi_eyedropper.h  wapi_file_watcher.h  wapi_filesystem.h  wapi_filewatcher.h  wapi_font.h  wapi_fs.h  wapi_geolocation.h  wapi_gpu.h  wapi_haptics.h  wapi_hotkey.h  wapi_http.h  wapi_idle.h  wapi_input.h  wapi_io.h  wapi_kv_storage.h  (+48 more)
runtime/browser/: NOTES.md  bridge.js  hello_game.wasm  hello_game_ai.wasm  hello_game_tracker.wasm  hello_triangle.wasm  index.html  manifest.json  popup.html  popup.js  ready.js  serve.js  sw.js  sw_host.js  wapi_shim.js
runtime/desktop/: CMakeLists.txt  build.bat
runtime/desktop/data/: devicedb.txt  gamepaddb.txt
runtime/desktop/src/: main.c  wapi_host.h  wapi_host_audio.c  wapi_host_authn.c  wapi_host_barcode.c  wapi_host_battery.c  wapi_host_biometric.c  wapi_host_bluetooth.c  wapi_host_camera.c  wapi_host_capability.c  wapi_host_clipboard.c  wapi_host_clock.c  wapi_host_codec.c  wapi_host_compression.c  wapi_host_contacts.c  wapi_host_content.c  wapi_host_core.c  wapi_host_crypto.c  wapi_host_devicedb.c  wapi_host_dialog.c  wapi_host_display.c  wapi_host_dnd.c  wapi_host_encoding.c  wapi_host_env.c  wapi_host_event.c  wapi_host_font.c  wapi_host_fs.c  wapi_host_gamepaddb.c  wapi_host_geolocation.c  wapi_host_gpu.c  wapi_host_haptics.c  wapi_host_hid.c  wapi_host_http.c  wapi_host_idle.c  wapi_host_input.c  wapi_host_io.c  wapi_host_kv_storage.c  wapi_host_kvstorage.c  wapi_host_media_caps.c  wapi_host_media_session.c  (+39 more)
runtime/desktop/src/platform/win32/: wapi_plat_win32.c  wapi_plat_win32_audio.c  wapi_plat_win32_gamepad.c  wapi_plat_win32_gamepad_hid.c  wapi_plat_win32_hid.c  wapi_plat_win32_menu.c  wapi_plat_win32_share.c  wapi_plat_win32_shell.c
runtime/plugin/: CMakeLists.txt
runtime/plugin/src/: wapi_clap_entry.c  wapi_clap_plugin.c  wapi_clap_process.c  wapi_plugin_host.c  wapi_plugin_host.h
runtime/sdl/: CMakeLists.txt  README.md
runtime/sdl/src/: main.c  wapi_host.h  wapi_host_audio.c  wapi_host_capability.c  wapi_host_clock.c  wapi_host_display.c  wapi_host_env.c  wapi_host_fs.c  wapi_host_gpu.c  wapi_host_haptics.c  wapi_host_input.c  wapi_host_io.c  wapi_host_memory.c  wapi_host_power.c  wapi_host_seat.c  wapi_host_sensors.c  wapi_host_surface.c  wapi_host_transfer.c  wapi_host_window.c
spec/: wapi-spec.md
